--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".MainApplication">
         <activity
             android:name=".activities.SplashActivity"
-            android:screenOrientation="portrait"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,8 +27,10 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="true"
+            android:screenOrientation="fullSensor"
             android:label="@string/app_name">
         </activity>
     </application>
 
 </manifest>
+<!--    android:screenOrientation="portrait"-->
