--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewKrepysh"
-        android:name=".MainApplication">
+        android:name=".utils.MainApplication">
         <activity
             android:name=".activities.SplashActivity"
 
